--- a/App/index.html
+++ b/App/index.html
@@ -13,5 +13,7 @@
 	<script type='text/javascript' src='js/kinetic.js'></script>
 	<script type='text/javascript' src='js/game.js'></script>
 	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
+	
+	<!-- <script type="text/javascript" src="js/SocialSharing.js"> </script> -->
 </body>
 </html>
