--- a/App/index.html
+++ b/App/index.html
@@ -9,9 +9,9 @@
 <body>
 	<div id='gameContainer'></div>
 
-	<script type='text/javascript' src='js/jquery23.js'></script>
+<!--	<script type='text/javascript' src='js/jquery23.js'></script> -->
 	<script type='text/javascript' src='js/kinetic.js'></script>
-	<script type='text/javascript' src='js/game.js'></script>
+	<script type='text/javascript' src='js/game.min.js'></script>
 	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
 	
 	<!-- <script type="text/javascript" src="js/SocialSharing.js"> </script> -->
