--- a/App/www/index.html
+++ b/App/www/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id='gameContainer'></div>
 
-<!--	<script type='text/javascript' src='js/jquery23.js'></script> -->
+	<script type='text/javascript' src='js/jquery23.js'></script>
 	<script type='text/javascript' src='js/kinetic.js'></script>
 	<script type='text/javascript' src='js/game.js'></script>
 	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
