--- a/App/www/index.html
+++ b/App/www/index.html
@@ -4,6 +4,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 	body{ padding:0px; margin:0px; }
+
+
+	@font-face {
+		font-family: "bubbleboddy light";
+		src: url(fonts/Bobbleboddy_light.ttf);
+	}
+	@font-face {
+		font-family: "bubbleboddy";
+		src: url(fonts/Bobbleboddy.ttf);
+	}
 	</style>
 </head>
 <body>
