--- a/App/www/index.html
+++ b/App/www/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel='stylesheet' type='text/css' href='css/font.css' />
 	<style>
 	body{ padding:0px; margin:0px; }
 
@@ -20,6 +21,7 @@
 	<div id='gameContainer'></div>
 
 	<script type='text/javascript' src='js/jquery23.js'></script>
+<!--	<script type='text/javascript' src='js/cordova.js'></script> -->
 	<script type='text/javascript' src='js/kinetic.js'></script>
 	<script type='text/javascript' src='js/game.js'></script>
 	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
