--- a/App/www/index.html
+++ b/App/www/index.html
@@ -98,7 +98,7 @@
 <!--	<script type='text/javascript' src='js/phonegap.js'></script> 
 	<script type='text/javascript' src='js/cordova.js'></script> -->
 	<script type='text/javascript' src='js/kinetic.js'></script>
-	<script type='text/javascript' src='js/game.js'></script>
+	<script type='text/javascript' src='js/game.min.js'></script>
 	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
 	
 	<!-- <script type="text/javascript" src="js/SocialSharing.js"> </script> -->
