on on timer thingy… pwede na mu continue

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -17,6 +17,15 @@
 		src: url(fonts/Bobbleboddy.ttf);
 	}
 	</style>
+
+	<script type='text/javascript' src='js/jquery23.js'></script>
+<!--	<script type='text/javascript' src='js/phonegap.js'></script> 
+	<script type='text/javascript' src='js/cordova.js'></script> -->
+	<script type='text/javascript' src='js/kinetic.js'></script>
+	<script type='text/javascript' src='js/game.js'></script>
+	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
+	
+	<!-- <script type="text/javascript" src="js/SocialSharing.js"> </script> -->
 </head>
 <body>
 	<div id="fb-root"></div>
@@ -94,14 +103,5 @@
     </script>
 
 	<div id='gameContainer'></div>
-	<script type='text/javascript' src='js/jquery23.js'></script>
-<!--	<script type='text/javascript' src='js/phonegap.js'></script> 
-	<script type='text/javascript' src='js/cordova.js'></script> -->
-	<script type='text/javascript' src='js/kinetic.js'></script>
-	<script type='text/javascript' src='js/game.min.js'></script>
-	<!-- <script type='text/javascript' src='gamejquery.js'></script> -->
-	
-	<!-- <script type="text/javascript" src="js/SocialSharing.js"> </script> -->
-
 </body>
 </html>
